Overflow-X bug fix

--- a/Semester 1/css/style.css
+++ b/Semester 1/css/style.css
@@ -75,6 +75,7 @@ body {
     max-height: 90vh;
     height: fit-content;
     overflow-y: scroll;
+    overflow-x: hidden;
     backdrop-filter: blur(12px);
     background-color: rgba(255, 255, 255, 0.95);
 }
